<resources>
    <string name="app_name">ClientEcommerce-M.IkhsanGumanof</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="restorant">Restaurant</string>
    <string name="communicate">Communicate</string>
    <string name="maps">Maps</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="mig">M. Ikhsan Gumanof</string>
    <string name="nomig">1811081007 TRPL 2A</string>
    <string name="image">Image</string>
    <string name="super_family">SUPER FAMILY</string>
    <string name="isi">ISI</string>
    <string name="harga">Harga</string>
    <string name="promo">Promo</string>
    <string name="dashboard">DashBoard</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_up_new_user">Sign Up New User</string>
</resources>
