<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    
    <TextView
        android:id="@+id/txtTitle"
        android:text="@string/sign_up_new_user"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/editFirstName"
        android:layout_below="@id/txtTitle"
        android:hint="@string/first_name"
        android:gravity="left"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/editLastName"
        android:layout_below="@id/editFirstName"
        android:hint="@string/last_name"
        android:gravity="left"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/editEmail"
        android:layout_below="@id/editLastName"
        android:hint="@string/email"
        android:gravity="left"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/editPassword"
        android:layout_below="@id/editEmail"
        android:hint="@string/password"
        android:gravity="left"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnInsert"
        android:textSize="16sp"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:layout_marginTop="30dp"
        android:layout_below="@id/editPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>