<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/foodCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardUseCompatPadding="true">
        <RelativeLayout
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <ImageView
                android:id="@+id/foodImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="4dp"
                android:src="@drawable/restomenu"
                android:contentDescription="@string/image" />
            <TextView
                android:id="@+id/foodTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/foodImage"
                android:layout_marginStart="5dp"
                android:text="@string/super_family"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/foodDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/foodImage"
                android:layout_below="@id/foodTitle"
                android:layout_marginStart="5dp"
                android:text="@string/isi"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/foodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/foodImage"
                android:layout_below="@id/foodDesc"
                android:layout_marginStart="5dp"
                android:text="@string/harga"
                android:textColor="#f32"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/foodPromo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/foodImage"
                android:layout_below="@id/foodPrice"
                android:layout_marginStart="5dp"
                android:text="@string/promo"
                android:textColor="#f295"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>